cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(picow_si7021_project C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(PICO_BOARD pico_w)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(si7021 si7021.c)
pico_enable_stdio_usb(si7021 0)
pico_enable_stdio_uart(si7021 1)
pico_add_extra_outputs(si7021)
target_link_libraries(si7021 pico_stdlib hardware_gpio hardware_i2c)
